--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
   - "3.8"
 install:
   - pip install -r requirements.txt
+  - pip install -r requirements-build.txt
   - pip install codecov
 script:
   - pytest --cov=./pycamunda 
